// Copyright 2019 Luis Guill√©n Civera <luisguillenc@gmail.com>. View LICENSE.

syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "github.com/luids-io/api/schemas/dnsutil/common.proto";

package luids.dnsutil.v1;
option go_package = "github.com/luids-io/api/dnsutil/grpc/pb";

service Finder {
    rpc GetResolv (GetResolvRequest) returns (GetResolvResponse) {}
    rpc ListResolvs (ListResolvsRequest) returns (ListResolvsResponse) {}
}

message GetResolvRequest {
    string id = 1;
}

message GetResolvResponse {
    ResolvData data = 1;
}

message ResolvsFilter {
    google.protobuf.Timestamp since = 1;
    google.protobuf.Timestamp to = 2;
    string server_ip = 3;
    string client_ip = 4;
    string name = 5;
    string resolved_ip = 6;
    string resolved_cname = 7;
    int32 qid = 8;
    int32 return_code = 9;
    string tld = 10;
    string tld_plus_one = 11;
}

message ListResolvsRequest {
    int32 max = 1;
    string next = 2;
    repeated ResolvsFilter filters = 3;
    bool reverse = 4;
}

message ListResolvsResponse {
    repeated ResolvData data = 1;
    string next = 2;
}
